static/styles/zulip.scss
/* ... */
.summary_row_private_message .summary_colorblock {
    background-color: hsl(0, 0%, 0%);
}

.messages-expand,
.messages-collapse {
    cursor: pointer;
}

/*
   We can't collapse the floating recipient bar yet, so this is
   just a temporary hack.
*/
.floating_recipient .messages-collapse {
    display: none;
}

.message_failed .rotating {
    display: inline-block;

    -webkit-animation: rotate 1s infinite linear;
    -moz-animation: rotate 1s infinite linear;
    -ms-animation: rotate 1s infinite linear;
    -o-animation: rotate 1s infinite linear;
    animation: rotate 1s infinite linear;
}

@-webkit-keyframes rotate {
    from {
        -webkit-transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(359deg);
    }
}

@-moz-keyframes rotate {
    from {
        -moz-transform: rotate(0deg);
    }

    to {
        -moz-transform: rotate(359deg);
    }
}

@-ms-keyframes rotate {
    from {
        -ms-transform: rotate(0deg);
    }

    to {
        -ms-transform: rotate(359deg);
    }
}

@-moz-keyframes rotate {
    from {
        -o-transform: rotate(0deg);
    }

    to {
        -o-transform: rotate(359deg);
    }
}

@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(359deg);
    }
}

@-webkit-keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-moz-keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeInMessage {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@-webkit-keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

@-moz-keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

@keyframes fadeInEditNotice {
    0% {
        transform: translateX(-10px);
    }

    100% {
        transform: translateX(0px);
    }
}

.floating_recipient .message_header_private_message {
    border-bottom: 0px;
    border-left: 0px;
}

.message_header_private_message .message_label_clickable {
    background-color: hsl(0, 0%, 27%);
    display: inline-block;
    padding: 3px 6px 2px 6px;
    font-weight: normal;
    font-size: 14px;
    height: 17px;
    line-height: 17px;
    border-left-color: hsl(0, 0%, 27%);
}

/* Base color backgrounds for messageboxes,
   private messages, mentions, and unread messages */

.messagebox {
    position: relative;
}

.private-message .messagebox,
.message_header_private_message .message-header-contents {
    background-color: hsla(192, 19%, 75%, 0.2);
    box-shadow: inset 1px 1px 0px hsl(0, 0%, 88%);
}

.message-header-contents {
    border-right: 1px solid hsl(0, 0%, 88%);
}

.mention .messagebox {
    background-color: hsl(8, 94%, 94%);
}

.messagebox .message_top_line {
    position: relative;
}

.recipient_row .message_row:first-child .unread_marker {
    top: 0px;
}

.unread_marker {
    display: block;
    position: absolute;
    left: 2px;
    top: 0px;
    padding-bottom: 2px;
    opacity: 0;
    z-index: 1;
    height: 100%;
    @include prefixed-transition(all, 0.3s, ease-out);
}

.unread-marker-fill {
    background-color: hsl(107, 74%, 29%);
    width: 3px;
    height: 100%;
    box-shadow: inset 0px -1px 0px 0px hsl(0, 0%, 100%);
}

.last_message .unread-marker-fill {
    box-shadow: none;
}

.unread .unread_marker {
    @include prefixed-transition(all, 0.3s, ease-out);
    opacity: 1;
}

.unread_marker.slow_fade {
    @include prefixed-transition(all, 2s, ease-out);
}

.unread_marker.fast_fade {
    @include prefixed-transition(all, 0.3s, ease-out);
}

.selected_message .messagebox {
    z-index: 1;
}

.selected_message .messagebox-content {
    box-shadow:
        inset 0px 0px 0px 2px hsl(215, 47%, 50%),
        -1px -1px 0px 0px hsl(215, 47%, 50%),
        1px 1px 0px 0px hsl(215, 47%, 50%),
        -1px 1px 0px 0px hsl(215, 47%, 50%),
        1px -1px 0px 0px hsl(215, 47%, 50%);
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}

.sender_name {
    display: inline-block;
    font-weight: 700;
    vertical-align: top;
    line-height: 12px;
    font-size: 14px;
    margin-left: -3px;
}

.sender-status {
    display: inline-block;
    margin: 8px 0px 8px -3px;
    /* this normalizes the margin of the emoji reactions with normal messages. */
    padding-bottom: 5px;
    vertical-align: middle;
    line-height: 18px;
    font-size: 14px;
    position: relative;
    max-width: calc(100% - 50px);
}

.message_controls.sender-status-controls {
    top: 10px;
}

.sender_name-in-status {
    margin-right: 3px;
    font-weight: 700;
}

.sender_name_hovered .sender_name,
.sender_name_hovered .sender_name-in-status {
    color: hsl(200, 100%, 40%);
}

.message_sender i.zulip-icon.bot,
.popover_info i.zulip-icon.bot {
    color: hsl(180, 5%, 74%);
    vertical-align: top;
    padding: 0 2px;
}

.message_sender i.zulip-icon.bot {
    font-size: 12px;
}

.popover_info i.zulip-icon.bot {
    margin-top: 3px;
}

.actions_hover:hover {
    color: hsl(200, 100%, 40%);
}

.message_failed,
.message_local {
    display: inline-block;
    cursor: pointer;
    font-size: 13px;
}

.message_failed {
    font-weight: bold;
    color: hsl(0, 100%, 50%);
    position: relative;
}

a.message_label_clickable:hover {
    cursor: pointer;
    color: hsl(200, 100%, 40%);
}

.on_hover_topic_edit {
    opacity: .1;
}

.always_visible_topic_edit {
    opacity: .7;
}

.on_hover_topic_edit:hover,
.always_visible_topic_edit:hover {
    cursor: pointer;
    opacity: 1.0;
}

.on_hover_topic_mute {
    padding-left: 3px;
    opacity: .1;
}

.on_hover_topic_mute:hover {
    cursor: pointer;
    opacity: 1.0;
}

.edit_content {
    width: 12px;
    display: inline-block;
    position: relative;
    color: hsl(0, 0%, 73%);
}
/* ... */

